fixed menu-highlight alignment issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,5 +84,4 @@ div.menu-level-2:hover {
 
 .menu-highlight {
   background: #ecf1fe;
-  grid-row-start: 1;
 }
